[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AIMM_simulator"
version = "2.0.0"
authors = [
  { name="Keith Briggs", email="k.briggs73@btinternet.com" },
]
description = "AIMM 5G system-level simulator (https://aimm.celticnext.eu/simulator/)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
