[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AIMM_simulator"
version = "2.0.2"
authors = [
  { name="Keith Briggs", email="k.briggs73@btinternet.com" },
]
description = "AIMM 5G system-level simulator (development for the AIMM project https://aimm.celticnext.eu)"
keywords = ["5G", "cellular radio", "simulation",]
"Bug Tracker" = "https://github.com/keithbriggs/AIMM-simulator/issues"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "simpy>=4.0",
  "matplotlib>=3.6",
]

[project.urls]
homepage = "https://github.com/keithbriggs/AIMM-simulator"
documentation = "https://aimm-simulator.readthedocs.io/en/latest/"
